--- a/vars/RedHat-8.yml
+++ b/vars/RedHat-8.yml
@@ -37,7 +37,7 @@ misp_pkg_list:
  - curl
  - gnupg
  #
- - "{% if (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int >= 8) and ansible_virtualization_type is defined %}haveged{% else %}rng-tools{% endif %}"
+ - "{% if (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] | int >= 8) and ansible_facts['virtualization_type'] is defined %}haveged{% else %}rng-tools{% endif %}"
  - wget
  # misp-modules
  - python36
@@ -76,7 +76,7 @@ misp_webserver_nginx:
  - php-fpm
 
 mysql_svc: mariadb
-rng_svc: "{% if (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int >= 8) and ansible_virtualization_type is defined %}haveged{% else %}rngd{% endif %}"
+rng_svc: "{% if (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] | int >= 8) and ansible_facts['virtualization_type'] is defined %}haveged{% else %}rngd{% endif %}"
 redis_svc: redis
 redis_conf: /etc/redis.conf
 misp_services:
