--- a/vars/RedHat-9.yml
+++ b/vars/RedHat-9.yml
@@ -37,7 +37,7 @@ misp_pkg_list:
  - curl
  - gnupg
  #
- - "{% if (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int >= 8) and ansible_virtualization_type is defined %}haveged{% else %}rng-tools{% endif %}"
+ - "{% if (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] | int >= 8) and ansible_facts['virtualization_type'] is defined %}haveged{% else %}rng-tools{% endif %}"
  - wget
  # misp-modules
  - python3
@@ -77,7 +77,7 @@ misp_webserver_nginx:
 
 mysql_svc: mariadb
 misp_mysql_socket: "/var/lib/mysql/mysql.sock"
-rng_svc: "{% if (ansible_os_family == 'RedHat' and ansible_distribution_major_version | int >= 8) and ansible_virtualization_type is defined %}haveged{% else %}rngd{% endif %}"
+rng_svc: "{% if (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] | int >= 8) and ansible_facts['virtualization_type'] is defined %}haveged{% else %}rngd{% endif %}"
 redis_svc: redis
 redis_conf: /etc/redis/redis.conf
 misp_services:
